workloads/headscale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  labels:
    app: headscale
spec:
  type: ClusterIP
  selector:
    app: headscale
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: headscale-stun
  labels:
    app: headscale
  annotations:
    metallb.io/loadBalancerIPs: "192.168.6.18,fd00:6::18"
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies: [IPv4, IPv6]
  type: LoadBalancer
  selector:
    app: headscale
  ports:
    - port: 3478
      targetPort: 3478
      nodePort: 30478
      protocol: UDP
      name: stun
