workloads/headscale/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headscale
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: net-john2143-https
    - name: shared-gateway
      sectionName: net-2143-https
  hostnames:
    - net.john2143.com
    - net.2143.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headscale
          port: 8080
